k8s/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sample-app
  namespace: default
  labels:
    app: sample-app
spec:
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: sample-app
          image: ghcr.io/didiberman/terraform-k8s-argocd-cicd-pipeline:sha-89cab65d7d3dfbb2646ac00285a78f8f5bcc9213
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
